[package]
name = "git-branch-graph"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.95"
clap = { version = "4.5.28", features = ["derive"] }
clap-verbosity-flag = "3.0.2"
colored = "3.0.0"
derive_more = { version = "2.0.1", features = ["from"] }
duct = "0.13.7"
env_logger = "0.11.6"
gix-config = "0.43.0"
log = "0.4.25"
systemd-journal-logger = "2.2.0"
walkdir = "2.5.0"
